2010-11-26  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/46528
	PR debug/46338
	* profile.c (branch_prob): Do not split blocks based on locations
	from debug statements.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@167171 138bc75d-0d04-0410-961f-82ee72b054a4